; ModuleID = '/home/carl/AnghaBench/git/extr_graph.c_graph_show_line_prefix.c'
source_filename = "/home/carl/AnghaBench/git/extr_graph.c_graph_show_line_prefix.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.diff_options = type { i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.diff_options*)* @graph_show_line_prefix to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @graph_show_line_prefix(%struct.diff_options* %0) #0 {
  %2 = alloca %struct.diff_options*, align 8
  store %struct.diff_options* %0, %struct.diff_options** %2, align 8
  %3 = load %struct.diff_options*, %struct.diff_options** %2, align 8
  %4 = icmp ne %struct.diff_options* %3, null
  br i1 %4, label %5, label %10

5:                                                ; preds = %1
  %6 = load %struct.diff_options*, %struct.diff_options** %2, align 8
  %7 = getelementptr inbounds %struct.diff_options, %struct.diff_options* %6, i32 0, i32 2
  %8 = load i32, i32* %7, align 4
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %11, label %10

10:                                               ; preds = %5, %1
  br label %22

11:                                               ; preds = %5
  %12 = load %struct.diff_options*, %struct.diff_options** %2, align 8
  %13 = getelementptr inbounds %struct.diff_options, %struct.diff_options* %12, i32 0, i32 2
  %14 = load i32, i32* %13, align 4
  %15 = load %struct.diff_options*, %struct.diff_options** %2, align 8
  %16 = getelementptr inbounds %struct.diff_options, %struct.diff_options* %15, i32 0, i32 1
  %17 = load i32, i32* %16, align 4
  %18 = load %struct.diff_options*, %struct.diff_options** %2, align 8
  %19 = getelementptr inbounds %struct.diff_options, %struct.diff_options* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = call i32 @fwrite(i32 %14, i32 1, i32 %17, i32 %20)
  br label %22

22:                                               ; preds = %11, %10
  ret void
}

declare dso_local i32 @fwrite(i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
